--- a/backend/package.json
+++ b/backend/package.json
@@ -15,10 +15,13 @@
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
+    "ejs": "^3.1.9",
     "express": "^4.18.2",
     "mongoose": "^5.13.9",
     "morgan": "^1.10.0",
-    "nodemon": "^2.0.14"
+    "nodemon": "^2.0.14",
+    "socket.io": "^4.7.4",
+    "tree-kill": "^1.2.2"
   },
   "devDependencies": {
     "eslint-plugin-react-refresh": "^0.4.5"
